smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/version-invalid-segment.smithy
// Invalid Smithy version number: 1.A.1
$version: "1.A.1"
